--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4"
-  }
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
+    }
 }
